fix spacings

--- a/src/index.css
+++ b/src/index.css
@@ -181,8 +181,19 @@ h1 {
     font-size: 1rem;
     white-space: nowrap;
     opacity: 0;
-    bottom: -25px;
     transition: all 0.3s ease;
+}
+
+.social-icons-container > .social-tooltip::after {
+    bottom: -15px;
+}
+
+.cert-logos > .social-tooltip::after {
+    bottom: -30px;
+}
+
+.education-university > .social-tooltip::after {
+    bottom: -40px;
 }
   
 .social-tooltip:hover::after {
@@ -656,7 +667,14 @@ body.popup-active .bug-image-popup {
 
     .social-tooltip::after {
         font-size: 0.9rem;
-        bottom: -15px;
+    }
+
+    .cert-logos > .social-tooltip::after {
+        bottom: -20px;
+    }
+
+    .education-university > .social-tooltip::after {
+        bottom: -25px;
     }
 
     .social-tooltip:hover::after {
